Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Infinite Tubes with Three.js | Demo 2 | Codrops</title>
+		<title>Microtecnología</title>
 		<meta name="description" content="Infinite WebGL tubes as seen on Fornasetti.com made with Three.js" />
 		<meta name="keywords" content="webgl, effect, tube, infinite, interactive, threejs, background, canvas" />
 		<meta name="author" content="Louis Hoebregts for Codrops" />
@@ -25,11 +25,8 @@
 		</svg>
 		<main>
 			<header class="codrops-header">
-				<div class="codrops-links">
-					<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/ScrollSpiral/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
-					<a class="codrops-icon codrops-icon--drop" href="https://tympanus.net/codrops/?p=30954" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
-				</div>
-				<h1 class="codrops-header__title">Infinite Tubes</h1>
+				
+				<h1 class="codrops-header__title" style="font-size: 82px; position: absolute;top: 130px;font-weight: 900;color: #000;">Microtecnología</h1>
 				<nav class="demos">
 					<a class="demo" href="index.html">Brick Tunnel</a>
 					<a class="demo demo--current" href="index2.html">Particles</a>
@@ -38,8 +35,8 @@
 					<a class="demo" href="index5.html">Triangle</a>
 					<a class="demo" href="index6.html">Mobile Gyroscope</a>
 				</nav>
-				<p class="codrops-header__tagline">A tunnel experiment in WebGL inspired by the effect seen on <a href="http://www.fornasetti.com/">Fornasetti</a></p>
-				<p class="codrops-header__info">Click and hold to release more particles</p>
+				<p class="codrops-header__tagline" style=" position: absolute;top: 267px;color: #000;font-weight: 600;font-size: 32px;">El futuro de las tecnologías <br>de la información <a href="https://kevinzepeda.github.io/microtecnologi-services">Servicios que ofrecemos</a></p>
+				<p class="codrops-header__info"  style=" position: absolute;top: 500px;color: #2c4657;font-weight: 600;font-size: 32px;">Click and hold to release more particles</p>
 			</header>
 			<div class="content">
 				<!-- The canvas where ThreeJs renders the WebGL -->
